# codemap

./: .env.example  .gitignore  README.md  pyproject.toml
.codemap/templates/: minimal.css
docs/superpowers/plans/: 2026-03-17-codemap-implementation.md  2026-03-20-api-spec-detail.md  2026-03-20-scanner-enhancements.md  2026-03-25-llm-integration.md
docs/superpowers/specs/: 2026-03-17-codemap-design.md  2026-03-25-llm-integration-design.md
skill/: codemap.md
src/codemap/: cli.py  config.py  models.py
src/codemap/ai/: __init__.py  client.py  enrich_doc.py  enrich_scan.py
src/codemap/doc/: api_spec.py  overview.py  table_spec.py
src/codemap/export/: docx_export.py  pdf.py  xlsx.py
src/codemap/renderer/: drawio.py  mermaid.py
src/codemap/scanner/: __init__.py  external_scanner.py  java_scanner.py  sql_scanner.py  ts_scanner.py
tests/: conftest.py  test_cli.py  test_config.py  test_integration.py  test_models.py
tests/ai/: test_client.py  test_enrich_doc.py  test_enrich_scan.py
tests/doc/: test_api_spec.py  test_overview.py  test_table_spec.py
tests/export/: test_docx_export.py  test_pdf.py  test_xlsx.py
tests/fixtures/: CampaignController.java  CampaignResponse.java  GdalService.java  ResultResponse.java  User.java  UserController.java  UserList.tsx  UserRequest.java  UserService.java  config.yaml  sample.sql  sample_with_comments.sql
tests/fixtures/.codemap/: config.yaml
tests/renderer/: test_drawio.py  test_mermaid.py
tests/scanner/: test_external_scanner.py  test_java_scanner.py  test_sql_scanner.py  test_ts_scanner.py
